# variable_importance

./: .gitignore  README.md  package-lock.json  pyproject.toml
api/: auth.py  dependencies.py  emitter.py  main.py  pubsub.py  schemas.py  task_queue.py  worker.py
api/routers/: auth_route.py  chat.py  documents.py  files.py  websocket.py  websocket_tasks.py  workflow.py  workflow_async.py  workflow_async_.py
app/: Dashboard.py  context_rag.py  hello.py  home.py  main.py  main_background.py  model.py  pyproject.toml  session_persistence.py  session_utils.py
app/ai/: __init__.py  config.py  factory.py  file_context.py  model.py  nodes.py  nodes_v2.py  plot_style.py  rag_agent.py  rag_functions.py  routing.py  state.py  state_v2.py  tools.py  web_search.py  workflow.py  workflow_v2.py
app/ai/memory/: context_rag.py
app/ai/pptx/: agent.py  models.py
app/pages/: 1_Chat.py  2_Code_Executor.py  3_Streaming_Chat.py  4_Artifacts.py  5_Rag_Explorer.py  5_Streaming_Chat.py  6_Workflows.py  7_Resources.py  8_Presentations.py
app/utils/: background_tasks.py
cache/plot_analyses/: plot_cache.json
cache/rag_db/: chroma.sqlite3
cache/sessions/: session_default_session.json  session_default_session_objects.pkl
exploration/: code_agent.ipynb  data.csv  fake_data.ipynb  pivoted_data.csv  reactjs.ipynb  semantic_synthetic_survey.ipynb  shap_trees.ipynb  test.py  test_code.ipynb  test_pdf_reader.ipynb
frontend/chat-app/: index.html  package-lock.json  package.json  vite.config.ts
frontend/chat-app/src/: App.tsx  index.css
src/variable_importance/: main.py
src/variable_importance/ai/: nodes.py  rag_agent_integration.py  tools.py  verification.py  web_search.py  workflow.py
src/variable_importance/memory/: context_rag.py  plot_analysis_cache.py
src/variable_importance/pptx/: __init__.py  builder.py
src/variable_importance/revealjs/: __init__.py  agent.py  builder.py  docs_rag.py  models.py  style_memory.py
(+31 files in other folders)
